--- a/core/repository/pom.xml
+++ b/core/repository/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>com.ecommerce</groupId>
             <artifactId>entity</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
