--- a/core/security/pom.xml
+++ b/core/security/pom.xml
@@ -25,7 +25,7 @@
             <version>${project.version}</version>
         </dependency>
 
-        <!--        dependency of demo-->
+        <!--        dependency of repository-->
         <dependency>
             <groupId>com.ecommerce</groupId>
             <artifactId>repository</artifactId>
