--- a/core/utility/pom.xml
+++ b/core/utility/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>com.ecommerce</groupId>
             <artifactId>entity</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
     </dependencies>
